fix layout bug in MessagePanel.tsx + move Exit and Share button to main GamePlay

--- a/src/assets/styles/MessagePanel.module.scss
+++ b/src/assets/styles/MessagePanel.module.scss
@@ -1,8 +1,5 @@
 @import "Common";
 
 .msgPanel {
-  @apply flex flex-col border-solid bg-white
-  border-gray-500 rounded-xl overflow-y-scroll mb-1;
-
   @extend .scrollBar;
 }
